# belenios

./: .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .ocamlinit  .opamrc-nosandbox  AUTHORS  CHANGES.md  CONTRIBUTING.md  Dockerfile_base_environment  Dockerfile_belenios_demo  Dockerfile_test_scenario_environment  Dockerfile_test_scenario_environment_with_prepared_database  INSTALL.md  MANIFEST  META.in  Makefile  README.md  RELEASE_NOTES.md  VERSION  _tags  all-native.itarget  all.itarget  api.odocl  belenios-lib.opam  belenios-platform-js.opam  belenios-platform-native.opam  belenios-platform.opam  belenios-server.opam  belenios-tool.opam  belenios.opam  doc.itarget  dune  dune-project  fixup-magic-mime.sh  genversion.sh  i18next-parser.config.js  minimal.itarget  myocamlbuild.ml  (+3 more)
po/: .gitignore  LINGUAS  Makefile  POTFILES  ab.po  de.po  dune  es.po  fr.po  gen-dune.sh  it.po  messages.pot  nb.po  nb_NO.po  ro.po
po/admin/: LINGUAS  Makefile  POTFILES  af.po  ar.po  bg.po  cs.po  de.po  dune  el.po  en.po  es.po  es_419.po  fa.po  fr.po  it.po  messages.pot  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  ta.po  tr.po  uk.po  zh_Hans.po
po/voter/: LINGUAS  Makefile  POTFILES  af.po  ar.po  bg.po  cs.po  de.po  dune  el.po  en.po  es.po  es_419.po  es_MX.po  fi.po  fr.po  it.po  jpn_JP.po  lt.po  messages.pot  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  sk.po  sl.po  ta.po  uk.po  zh_Hans.po
src/admin/: admin.html  admin.ml  common.ml  credentials.ml  drafts.ml  dune  elections.ml  i18n.mli
src/common/api/: belenios_api.ml  belenios_api.mli  belenios_web_api.mli  common.ml  common.mli  dune  endpoints.ml  endpoints.mli  serializable.atd
src/jslib/: belenios_jslib.ml  dune
src/lib/core/: archive.ml  archive.mli  belenios_core.ml  common.ml  common.mli  common_types.ml  common_types.mli  credential.ml  credential.mli  crypto_std.ml  crypto_std.mli  crypto_types.ml  dune  ed25519_libsodium.ml  ed25519_libsodium.mli  ed25519_pure.ml  ed25519_pure.mli  election_types.ml  election_v0.mli  events.ml  events.mli  group.ml  group_field.ml  group_field.mli  group_witness.ml  group_witness.mli  majority_judgment.ml  majority_judgment.mli  method_mj.ml  method_mj.mli  method_schulze.ml  method_schulze.mli  method_stv.ml  method_stv.mli  misc_types.ml  mixnet.mli  password.ml  password.mli  pki.ml  pki.mli  (+37 more)
src/lib/question/: belenios_question.ml  belenios_question.mli  dune  homomorphic.ml  homomorphic.mli  lists.ml  lists.mli  non_homomorphic.ml  non_homomorphic.mli  question_h.atd  question_h.ml  question_l.atd  question_l.ml  question_nh.atd  question_nh.ml  types.ml  types.mli
src/lib/v0/: dune  election.ml  election.mli  election_v0.ml  election_v0.mli  group.ml  group.mli  mixnet.ml  mixnet.mli  question_h.ml  question_h_v0.ml  question_h_v0.mli  question_nh.ml  question_nh_v0.ml  serializable.atd  trustees.ml
src/lib/v1/: dune  election.ml  election.mli  group.ml  group.mli  mixnet.ml  mixnet.mli  question.ml  question.mli  question_h.ml  question_h.mli  question_l.ml  question_nh.ml  question_nh.mli  serializable.atd  trustees.ml  trustees.mli  types.mli
src/platform/: belenios_platform.ml  dune  platform.mli  signatures.mli  version.mli
src/platform/config/: dune  gen_config.ml
src/platform/js/: dune  platform.ml  random.js  setup.js
src/platform/native/: dune  libsodium_stubs.c  platform.ml
src/platform/version/: dune  gen.sh  get_build.sh
src/static/: belenios-tool.html.itarget  booth.css  common.css  dune  responsive_site.css  site.css  vote.html.itarget  wrap_tool.sh
src/storage/api/: belenios_storage_api.ml  belenios_storage_api.mli  core.ml  core.mli  dune  extra.ml  extra.mli  file.ml  file_serializers.ml  file_serializers.mli  file_types.ml  lopt.ml  lopt.mli  serializable.atd  serializable.ml  signatures.ml  storage.ml  storage.mli  types.ml
src/tool/: belenios-tool.html  belenios-tool.html.itarget  belenios_tool.html  common.ml  dune  election.ml  election_cmd.ml  election_cmd.mli  main.ml  random.ml  sealing.ml  setup.ml  tool_archive_pull.ml  tool_cmdline.ml  tool_common.ml  tool_common.mli  tool_credgen.ml  tool_credgen.mli  tool_election.ml  tool_election.mli  tool_election_data.ml  tool_election_data.mli  tool_events.ml  tool_events.mli  tool_js.ml  tool_js_booth.ml  tool_js_common.ml  tool_js_credgen.ml  tool_js_fingerprint.ml  tool_js_i18n.ml  tool_js_i18n.mli  tool_js_pd.ml  tool_js_questions.ml  tool_js_shuffle.ml  tool_js_tkeygen.ml  tool_js_ttkeygen.ml  tool_main.ml  tool_mkarchive.ml  tool_mkelection.ml  tool_mkelection.mli  (+4 more)
src/tool/cmdline/: dune  random.mli  tool_cmdline.ml  tool_verifydiff.ml  tool_verifydiff.mli
src/tool/js/: belenios-tool.html  dune  tool_js.ml  tool_js_common.ml  tool_js_credgen.ml  tool_js_fingerprint.ml  tool_js_html.ml  tool_js_pd.ml  tool_js_tkeygen.ml
src/tool/lib/: tool_credgen.ml  tool_credgen.mli  tool_election.ml  tool_election.mli  tool_mkelection.mli  tool_tkeygen.ml  tool_tkeygen.mli  tool_verifydiff.ml
src/web/: auth_cas.ml  auth_cas.mli  auth_common.ml  auth_common.mli  auth_dummy.ml  auth_dummy.mli  auth_password.ml  auth_password.mli  common.ml  common.mli  dune  helios_registration.ml  helios_templates.ml  mail_formatter.ml  mail_formatter.mli  mail_templates.ml  ocsipersist_ballotbox.ml  ocsipersist_ballotbox.mli  pages_admin.ml  pages_admin.mli  pages_common.ml  pages_common.mli  pages_sig.mli  pages_voter.ml  pages_voter.mli  registration.ml  server.mllib  services.ml  site_admin.ml  site_admin.mli  site_common.ml  site_common.mli  site_voter.ml  templates.ml  templates.mli  web_auth.ml  web_auth.mli  web_auth_cas.ml  web_auth_dummy.ml  web_auth_email.ml  (+48 more)
src/web/api/: belenios_web_api.ml  belenios_web_api.mli  common.ml  common.mli  dune  endpoints.ml  endpoints.mli  serializable.atd  serializable.ml  types.ml
src/web/common/: confirmation.ml  confirmation.mli  dune  i18n.ml  i18n.mli  languages.ml  languages.mli  links.ml  mail_formatter.ml  mail_formatter.mli  mails_admin.ml  mails_admin.mli  mails_admin_sig.mli  (+7 more)
(+990 files in other folders)
