(rule
 (target en.mo)
 (deps en.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target en.json)
 (deps en.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target fr.mo)
 (deps fr.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target fr.json)
 (deps fr.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target de.mo)
 (deps de.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target de.json)
 (deps de.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target it.mo)
 (deps it.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target it.json)
 (deps it.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target ro.mo)
 (deps ro.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target ro.json)
 (deps ro.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target nb.mo)
 (deps nb.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target nb.json)
 (deps nb.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target es.mo)
 (deps es.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target es.json)
 (deps es.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target uk.mo)
 (deps uk.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target uk.json)
 (deps uk.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target cs.mo)
 (deps cs.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target cs.json)
 (deps cs.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target oc.mo)
 (deps oc.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target oc.json)
 (deps oc.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target pt_BR.mo)
 (deps pt_BR.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target pt_BR.json)
 (deps pt_BR.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target el.mo)
 (deps el.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target el.json)
 (deps el.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target nl.mo)
 (deps nl.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target nl.json)
 (deps nl.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(rule
 (target sk.mo)
 (deps sk.po)
 (action (run ocaml-gettext --action compile --compile-output %{target} %{deps})))

(rule
 (target sk.json)
 (deps sk.mo)
 (action (with-stdout-to %{target} (run ../../src/mo2json/mo2json.exe %{deps}))))

(install
 (package belenios-server)
 (section share)
 (files
  (en.mo as locales/voter/en.mo)
  (en.json as locales/voter/en.json)
  (fr.mo as locales/voter/fr.mo)
  (fr.json as locales/voter/fr.json)
  (de.mo as locales/voter/de.mo)
  (de.json as locales/voter/de.json)
  (it.mo as locales/voter/it.mo)
  (it.json as locales/voter/it.json)
  (ro.mo as locales/voter/ro.mo)
  (ro.json as locales/voter/ro.json)
  (nb.mo as locales/voter/nb.mo)
  (nb.json as locales/voter/nb.json)
  (es.mo as locales/voter/es.mo)
  (es.json as locales/voter/es.json)
  (uk.mo as locales/voter/uk.mo)
  (uk.json as locales/voter/uk.json)
  (cs.mo as locales/voter/cs.mo)
  (cs.json as locales/voter/cs.json)
  (oc.mo as locales/voter/oc.mo)
  (oc.json as locales/voter/oc.json)
  (pt_BR.mo as locales/voter/pt_BR.mo)
  (pt_BR.json as locales/voter/pt_BR.json)
  (el.mo as locales/voter/el.mo)
  (el.json as locales/voter/el.json)
  (nl.mo as locales/voter/nl.mo)
  (nl.json as locales/voter/nl.json)
  (sk.mo as locales/voter/sk.mo)
  (sk.json as locales/voter/sk.json)))
