(executable
 (name admin)
 (modes js)
 (js_of_ocaml (javascript_files ../../ext/sjcl/sjcl.js ../../ext/jsbn/BigIntCompatFull.js))
 (libraries js_of_ocaml-lwt js_of_ocaml-tyxml belenios-platform-js belenios belenios_api belenios_tool_common belenios_tool_js_common)
 (preprocess (pps js_of_ocaml-ppx)))

(install
 (files admin.html)
 (section share)
 (package belenios-server))
