(executable
 (name belenios_jslib)
 (modes js)
 (modules belenios_jslib)
 (js_of_ocaml (javascript_files ../../ext/sjcl/sjcl.js ../../ext/jsbn/BigIntCompatFull.js ../platform/js/random.js))
 (libraries js_of_ocaml-lwt belenios-platform-js belenios belenios_tool_common belenios_tool_js_common)
 (preprocess (pps js_of_ocaml-ppx lwt_ppx)))
