(library
 (name belenios_platform)
 (public_name belenios-platform)
 (libraries
  (re_export lwt))
 (modules_without_implementation signatures)
 (virtual_modules platform))

(copy_files version/version.ml)

(rule
 (target config.mlh)
 (action
  (with-stdout-to
   %{target}
   (run config/gen_config.exe))))
